--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
     <head>
   <meta charset="UTF-8">
     <title>Barbearia Cut</title>
-
-   <style>
-</style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
- <body>
- <h1 style="text-align: center">Sobre a Barbearia Cut</h1>
+<body>
+<img id="banner" src="banner.jpg">
 
- <p style="<p style=""text"-align: center">Localizada no coração da cidade a <strong>Barbearia Cut</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2023, a Barbearia Cut já é destaque na cidade e conquista novos clientes a cada dia.</p>
+ <h1>Sobre a Barbearia Cut</h1>
 
- <p style="font-size: 20px; text-align:center"<em>Nossa missão é:  <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
+ <p>Localizada no coração da cidade a <strong>Barbearia Cut</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2023, a Barbearia Cut já é destaque na cidade e conquista novos clientes a cada dia.</p>
+
+ <p id ="caramelo"style="font-size: 20px; text-align:center"<em>Nossa missão é:  <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
 
  <p style="text-align:center">Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 
