--- a/index.html
+++ b/index.html
@@ -7,15 +7,31 @@
 </head>
 
 <body>
+  <header>
+  <h1>Barbearia Cut</h1> 
+</header>
 <img id="banner" src="banner.jpg">
+<div class="principal">
 
- <h1>Sobre a Barbearia Cut</h1>
+</div>
+ <h2>Sobre a Barbearia Cut</h2>
 
- <p>Localizada no coração da cidade a <strong>Barbearia Cut</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2023, a Barbearia Cut já é destaque na cidade e conquista novos clientes a cada dia.</p>
+ <p>Localizada no centro da cidade a <strong>Barbearia Cut</strong> traz para o comércio o que há de melhor para o seu cabelo e barba. Fundada em 2023, a Barbearia Cut já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
  <p id ="caramelo"style="font-size: 20px; text-align:center"<em>Nossa missão é:  <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
-
+</div>
  <p style="text-align:center">Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+  <div class="beneficios"         >
+<h3>Benefícios</h3>
 
+  <ul>
+  <li class="itens">*Antendimento aos Clientes</li>
+  <li class="itens">*Espaço diferenciado</li>
+  <li class="itens">*Localização
+  <li class="itens">*Profissionais Qualificados
+</ul>
+
+<img src="beneficios.jpg" class="imagembeneficios"
+</div>
 </body>
 </html>
