--- a/produtos.html
+++ b/produtos.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Produtos - Barbearia Cut</title>
+		<title>Produtos - Barbearia Alura</title>
 
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="produtos.css">
